test/flowanalysis/recursion/rec_obj-1.good
Error: Unable to determine type of field from nil (rec_obj-1.chpl:9)
